# vishwajit-portfolio-web

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  RENDER_SETUP.md  VERCEL_SETUP.md  build.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml  requirements.txt
core/: admin.py  context_processors.py  emails.py  forms.py  models.py  urls.py  views.py
core/management/commands/: seed_case_studies.py
core/migrations/: 0001_initial.py
portfolio/: urls.py  wsgi.py
portfolio/settings/: base.py  production.py
static/css/: main.css
static/js/: effects.js  main.js
templates/: about.html  base.html  contact.html  experience.html  home.html  skills.html
templates/case_studies/: _card.html  detail.html  list.html
templates/emails/: contact_notification.html  contact_notification.txt
templates/partials/: social_links.html
